feat(test) add tests: Bluboo Maya Max, Hisense L675, Vertex Impress Game, Inoi 5i, Hisense Infinity H12, Vertex Impress Luck feat(device) rename Nomi C07008 to Nomi Sigma feat(device) detect brand Ross&Moor models: RMD-550 feat(device) detect brand Nomi models: Ultra 3 Pro (C101040) feat(device) detect brand Motorola models: Moto G5s Plus feat(device) detect brand Prestigio models: Wize R3 (PSP3423DUO) feat(device) detect brand Jinga models: Hit 4G feat(device) detect brand UNIWA models: F40 feat(device) detect brand Lenovo models: Yoga Smart Tab (YT-X705L, YT-X705F), Tab M7 (TB-7305I)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9289,6 +9289,9 @@ Lenovo:
     - regex: 'TB-X606[FXV](?:[);/ ]|$)'
       model: 'Tab M10 FHD Plus'
       device: 'tablet'
+    - regex: 'TB-7305I(?:[);/ ]|$)'
+      model: 'Tab M7'
+      device: 'tablet'
     - regex: 'Lenovo ?B8000(-[FH])?'
       model: 'Yoga Tablet 10'
       device: 'tablet'
@@ -9315,6 +9318,9 @@ Lenovo:
       device: 'tablet'
     - regex: 'YT-X703L'
       model: 'Yoga Tab 3 Plus'
+      device: 'tablet'
+    - regex: 'YT-X705[FL]'
+      model: 'Yoga Smart Tab'
       device: 'tablet'
 
     - regex: 'S6000(?:[);/ ]|$)'
@@ -11025,7 +11031,7 @@ Motorola:
       model: 'Moto G'
     - regex: '(?:MOT-|Motorola-)?XT1799-2'
       model: 'Moto G5s'
-    - regex: '(?:MOT-|Motorola-)?XT180[3-5]'
+    - regex: '(?:MOT-|Motorola-)?XT180[3-5]|Moto G ?5S Plus'
       model: 'Moto G5s Plus'
     - regex: '(?:MOT-|Motorola-)?XT168[57]'
       model: 'Moto G5 Plus'
@@ -11561,7 +11567,16 @@ Nomi:
     - regex: 'C101010 Ultra2'
       model: 'Ultra 2'
       device: 'tablet'
-    - regex: '(C0(?:700(?:[02358]|2HD)|7850)|C1010[0-3])(?:[);/ ]|$)'
+    - regex: '(?:Nomi_)?C101040'
+      model: 'Ultra 3 Pro'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C070011'
+      model: 'Corsa 2'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C07008'
+      model: 'Sigma'
+      device: 'tablet'
+    - regex: '(C0(?:700(?:[0235]|2HD)|7850)|C1010[0-3])(?:[);/ ]|$)'
       model: '$1'
       device: 'tablet'
     - regex: 'Nomi[ _-]([^;/]+) Build'
@@ -14815,6 +14830,9 @@ Prestigio:
     - regex: 'Muze C3(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C3'
+    - regex: 'PSP3423DUO(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Wize R3'
     - regex: '((?:PAP|PSP)[0-9]+[a-z0-9_]+(?: DUO)?)(?:[);/ ]|$)'
       model: '$1'
       device: 'smartphone'
@@ -18905,7 +18923,7 @@ Ritmix:
 
 # Ross&Moor
 'Ross&Moor':
-  regex: 'RMD[-_](974R|600)(?:[);/ ]|$)'
+  regex: 'RMD[-_](974R|600|550)(?:[);/ ]|$)'
   device: 'tablet'
   model: 'RMD-$1'
 
@@ -20418,7 +20436,7 @@ TurboKids:
 
 # Jinga
 Jinga:
-  regex: 'Jinga[-_ ]|(?:(?:Fresh|Optim)4G|Pass(?:Plus|3G)|PicassoNote|Hotz[_ ]M1|WinPRO|Touch4G|Start3G|IGO[ _]L[41]|Basco (?:L3|L[45]00|XS1|S2))(?:[);/ ]|$)'
+  regex: 'Jinga[-_ ]|(?:(?:Fresh|Optim)4G|Pass(?:Plus|3G)|PicassoNote|Hotz[_ ]M1|WinPRO|Touch4G|Start3G|IGO[ _]L[41]|Basco (?:L3|L[45]00|XS1|S2)|Hit4G)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Optim4G(?:[);/ ]|$)'
@@ -20427,6 +20445,8 @@ Jinga:
       model: 'Fresh 4G'
     - regex: 'Hotz[_ ]M1(?:[);/ ]|$)'
       model: 'Hotz M1'
+    - regex: 'Hit4G(?:[);/ ]|$)'
+      model: 'Hit 4G'
     - regex: 'PassPlus(?:[);/ ]|$)'
       model: 'Pass Plus'
     - regex: 'Pass3G(?:[);/ ]|$)'
@@ -21216,7 +21236,7 @@ NorthTech:
 
 # UNIWA
 UNIWA:
-  regex: 'UNIWA[ _](X5)(?:[);/ ]|$)'
+  regex: 'UNIWA[ _](X5|F40)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
