--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -4164,7 +4164,7 @@
   device:
     type: tablet
     brand: Nomi
-    model: C07008
+    model: Sigma
   os_family: Android
   browser_family: Chrome
 - 
