--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -101,7 +101,7 @@ HTC:
       model: 'One'
     - regex: 'PJ83100(?:[);/ ]|$)'
       model: 'One X'
-    - regex: 'One Mini 2(?:[);/ ]|$)'
+    - regex: '(?:HTC)?One ?Mini ?2(?:[);/ ]|$)'
       model: 'One Mini 2'
     - regex: 'X2-HT(?:[);/ ]|$)'
       model: 'One X2'
@@ -111,14 +111,26 @@ HTC:
       model: 'J One'
     - regex: 'HTL23(?:[);/ ]|$)'
       model: 'J Butterfly'
+    - regex: 'HTCButterflys901s(?:[);/ ]|$)'
+      model: 'Butterfly S'
     - regex: '(?:0PJA2|0PJA10)(?:[);/ ]|$)'
       model: 'One M9'
+    - regex: 'HTC(?:6500LVW|PN071)(?:[);/ ]|$)'
+      model: 'One M7'
+    - regex: '(?:One M8|HTC6525LVW)(?:[);/ ]|$)'
+      model: 'One M8'
+    - regex: '0PAJ5(?:[);/ ]|$)'
+      model: 'One E8'
+    - regex: 'HTC6515LVW(?:[);/ ]|$)'
+      model: 'One Remix'
     - regex: 'X525a(?:[);/ ]|$)'
       model: 'One X+'
     - regex: '2PQ93(?:[);/ ]|$)'
       model: 'One A9'
     - regex: 'ADR6300'
       model: 'Droid Incredible'
+    - regex: 'HTC6435LVW'
+      model: 'Droid DNA'
     - regex: 'ADR6400L'
       model: 'ThunderBolt'
     - regex: 'ADR6410LRA'
@@ -135,8 +147,20 @@ HTC:
       model: 'Desire 626S'
     - regex: '0PCV1(?:[);/ ]|$)'
       model: 'Desire 510'
+    - regex: 'HTC[_ ]D310n(?:[);/ ]|$)'
+      model: 'Desire 310'
     - regex: '608t(?:[);/ ]|$)'
       model: 'Desire 608t'
+    - regex: 'HTC_0P9O2(?:[);/ ]|$)'
+      model: 'Desire 610'
+    - regex: 'HTC[_ ]?(0P4E[12])(?:[);/ ]|$)'
+      model: 'Desire 601'
+    - regex: 'HTCD620h(?:[);/ ]|$)'
+      model: 'Desire 620'
+    - regex: 'HTC(?:0P9C2|D816x)(?:[);/ ]|$)'
+      model: 'Desire 816'
+    - regex: 'HTC_?D526h(?:[);/ ]|$)'
+      model: 'Desire 526'
     - regex: 'EXODUS 1(?:[);/ ]|$)'
       model: 'Exodus 1'
 
@@ -151,9 +175,9 @@ HTC:
     - regex: 'HTC[ _\-]Flyer[ _\-]([\w]{1,5})'
       device: 'tablet'
       model: 'Flyer $1'
-    - regex: 'HTC[ _\-]One[ _\-]max(?:[);/ ]|$)'
+    - regex: 'HTC(?:[ _\-])?(?:One[ _\-]max|6600LVW)(?:[);/ ]|$)'
       device: 'phablet'
-      model: 'One max'
+      model: 'One Max'
     - regex: 'HTC[ _]([^/;]+) [0-9]+(?:\.[0-9]+)+ Build'
       model: '$1'
     - regex: 'HTC[ _]([^/;]+) Build'
@@ -179,10 +203,6 @@ HTC:
       model: '$1'
     - regex: '(ADR[a-z0-9]+)'
       model: '$1'
-    - regex: '(One M8)'
-      model: '$1'
-    - regex: '0PAJ5(?:[);/ ]|$)'
-      model: 'One E8'
     - regex: 'HTV32(?:[);/ ]|$)'
       model: '10'
     - regex: 'HTV31(?:[);/ ]|$)'
@@ -2794,7 +2814,7 @@ Blu:
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
       model: 'Advance $1'
-    - regex: '(?:BLU[_ ])?Studio[ _](5.0 C|5.5|View XL|Mega|C 8\+8|[CG][ _]HD|C|G|Touch|M HD|M5 Plus|J[1258]|X8 HD|X5|XL|X)(?:[);/ ]|$)'
+    - regex: '(?:BLU[_ ])?Studio[ _](5.0 C|5.5|C 5\+5 LTE|View XL|Mega|C 8\+8|[CG][ _]HD|C|G|Touch|M HD|M5 Plus|J[1258]|X8 HD|X5|XL|X)(?:[);/ ]|$)'
       model: 'Studio $1'
     - regex: '(?:BLU[_ ])?Studio[ _]5.0 ?K(?:[);/ ]|$)'
       model: 'Studio 5.0 K'
@@ -3156,6 +3176,10 @@ Vivo:
       model: 'V15 Pro'
     - regex: 'vivo 1909(?:[);/ ]|$)'
       model: 'V17 Pro'
+    - regex: 'vivo 1907(?:_19)?(?:[);/ ]|$)'
+      model: 'V17 Neo'
+    - regex: 'vivo 1920(?:[);/ ]|$)'
+      model: 'V17'
     - regex: 'V2022(?:[);/ ]|$)'
       model: 'V20 SE'
     - regex: '(?:VIV-|BBG-)?vivo[ _]1601(?:[);/ ]|$)'
@@ -3174,6 +3198,8 @@ Vivo:
       model: 'V9'
     - regex: 'vivo 1727(?:[);/ ]|$)'
       model: 'V9 Youth'
+    - regex: 'vivo 1851(?:[);/ ]|$)'
+      model: 'V9 Pro'
     - regex: 'vivo X5Pro(?:[);/ ]|$)'
       model: 'X5 Pro'
     - regex: 'vivo 1721(?:[);/ ]|$)'
@@ -3214,6 +3240,8 @@ Vivo:
       model: 'X9 Plus'
     - regex: 'vivo 1902(?:[);/ ]|$)'
       model: 'Y17'
+    - regex: 'vivo 1906(?:[);/ ]|$)'
+      model: 'Y11'
     - regex: 'vivo 1915(?:[);/ ]|$)'
       model: 'Y19'
     - regex: 'V202[79](?:[);/ ]|$)'
@@ -3234,7 +3262,7 @@ Vivo:
       model: 'Y3'
     - regex: 'V1930A(?:[);/ ]|$)'
       model: 'Y3 Standard'
-    - regex: 'V203[46]A(?:[);/ ]|$)'
+    - regex: '(?:vivo 1938|V203[46]A)(?:[);/ ]|$)'
       model: 'Y30'
     - regex: 'V2099A(?:[);/ ]|$)'
       model: 'Y30 (2021)'
@@ -7914,7 +7942,7 @@ iNew:
 
 # iPro
 iPro:
-  regex: '(?:Kylin[ _]5.[05]S?|KYLIN40|Jade[78]s|Amber[67]S?|Amber5S_Pro|Phonenix50S|Zafiro)(?:[);/ ]|$)'
+  regex: '(?:Kylin[ _]5.[05]S?|KYLIN40|Jade[78]s|Amber[67]S?|Amber5S_Pro|Phonenix50S|Zafiro|I9355A)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Kylin_5.0S'
@@ -7935,6 +7963,8 @@ iPro:
       model: 'Phonenix 50S'
     - regex: 'Zafiro'
       model: 'Zafiro'
+    - regex: '(I9355A)'
+      model: '$1'
 
 # Infinix
 Infinix:
@@ -8191,6 +8221,20 @@ Intex:
   models:
     - regex: 'IM0318ND'
       model: 'Aqua Lions 3'
+    - regex: 'AQUA[ _]LIONS[ _]T1[ _]LITE(?:[);/ ]|$)'
+      model: 'Aqua Lions T1 Lite'
+    - regex: 'AQUA[ _]LIONS[ _]([NT]1|[23]|E3)(?:[);/ ]|$)'
+      model: 'Aqua Lions $1'
+    - regex: 'AQUA (A4) PLUS(?:[);/ ]|$)'
+      model: 'Aqua $1 Plus'
+    - regex: 'AQUA[ _](A4|S[13])(?:[);/ ]|$)'
+      model: 'Aqua $1'
+    - regex: 'AQUA CRYSTAL\+(?:[);/ ]|$)'
+      model: 'Aqua Crystal Plus'
+    - regex: 'AQUA FulVU e5(?:[);/ ]|$)'
+      model: 'Aqua Fulvu E5'
+    - regex: 'AQUA JEWEL 2(?:[);/ ]|$)'
+      model: 'Aqua Jewel 2'
     - regex: 'Intex[ _]([^/;]*)[ _]Build'
       model: '$1'
     - regex: '(Cloud (?:Fame|Glory) 4G)'
@@ -9606,6 +9650,8 @@ LG:
       model: 'G7 Fit'
     - regex: 'LM-Q910'
       model: 'G7 One'
+    - regex: 'LGL23(?:[);/ ]|$)'
+      model: 'G Flex'
     - regex: 'LM-G820(N|QM[0127]|UMB)?'
       model: 'G8'
     - regex: 'LM-G850'
@@ -11029,7 +11075,7 @@ Motorola:
       model: 'Moto G7 Plus'
     - regex: '(?:MOT-|Motorola-)?XT10(?:49|5[23568]|60|9[23457])'
       model: 'Moto X'
-    - regex: '(?:MOT-|Motorola-)?XT1562'
+    - regex: '(?:MOT-|Motorola-)?XT156[23]'
       model: 'Moto X Play'
     - regex: '(?:MOT-|Motorola-)?XT1572'
       model: 'Moto X Style'
@@ -11065,7 +11111,10 @@ Motorola:
       model: 'One Macro'
     - regex: 'motorola one 5G UW'
       model: 'One 5G UW'
-
+    - regex: 'motorola one vision'
+      model: 'One Vision'
+    - regex: 'moto g stylus'
+      model: 'Moto G Stylus'
     - regex: 'moto g power'
       model: 'Moto G Power'
     - regex: 'moto g\(([0-9])\) power lite'
@@ -11529,9 +11578,23 @@ Nomu:
     - regex: '(V1600S)(?:[);/ ]|$)'
       model: '$1'
 
+# Opsson
+Opsson:
+  regex: 'Opsson|IUSAI'
+  device: 'smartphone'
+  models:
+    - regex: 'IUSAI[ _]([^/;]+) Build'
+      model: 'Iusai $1'
+    - regex: 'IUSAI[ _]([^/;\)]+)[/;\)]'
+      model: 'Iusai $1'
+    - regex: 'Opsson[ _]([^/;]+) Build'
+      model: '$1'
+    - regex: '(?:Opsson-)?Opsson[ -_]([^/;]+)/'
+      model: '$1'
+
 # Nomi
 Nomi:
-  regex: 'Nomi[ _-]|(C101010 Ultra2|i501[234]|i5032|i50[57]0|i5510|i5532|C0(700(?:[02358]|2HD)|7850)|C1010[0-3])(?:[);/ ]|$)'
+  regex: 'Nomi[ _-]|(C101010 Ultra2|i501[234]|i5032|i50[57]0|i5510|i5532|C0(700(?:[02358]|2HD)|7850)|C1010[0-3]|i(?:50[015]|450|40[01]|55[02]))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'i501[23](?:[);/ ]|$)'
@@ -11550,10 +11613,12 @@ Nomi:
       model: 'Space X2'
     - regex: 'i5510(?:[);/ ]|$)'
       model: 'Space M'
+    - regex: '(?:Nomi[ _])?i(50[015]|450|40[01]|55[02])(?:[);/ ]|$)'
+      model: 'i$1'
     - regex: 'C101010 Ultra2'
       model: 'Ultra 2'
       device: 'tablet'
-    - regex: '(C0(?:700(?:[02358]|2HD)|7850)|C1010[0-3])(?:[);/ ]|$)'
+    - regex: '(?:Nomi[ _])?(C0(?:700(?:[02358]|2HD)|7850|9600)|C1010[0-3])(?:[);/ ]|$)'
       model: '$1'
       device: 'tablet'
     - regex: 'Nomi[ _-]([^;/]+) Build'
@@ -11637,12 +11702,12 @@ Nous:
 
 # Nvidia
 Nvidia:
-  regex: 'NVIDIA|SHIELD Tablet K1|SHIELD Android TV|Tegra(Note-P1640| Note 7)'
+  regex: 'NVIDIA|SHIELD Tablet(?: K1)?|SHIELD Android TV|Tegra(Note-P1640| Note 7)'
   device: 'tablet'
   models:
     - regex: 'TegraNote-P1640'
       model: 'Tegra Note P1640'
-    - regex: '(SHIELD Tablet K1|Tegra Note 7)(?: Build|[;)])'
+    - regex: '(SHIELD Tablet(?: K1)?|Tegra Note 7)(?: Build|[;)])'
       model: '$1'
     - regex: 'SHIELD Android TV'
       model: 'SHIELD Android TV'
@@ -12354,20 +12419,6 @@ OPPO:
       model: '$1'
 
     - regex: '(?:OB-)?OPPO[ _]?((?!Browser)[a-z0-9]+)'
-      model: '$1'
-
-# Opsson
-Opsson:
-  regex: 'Opsson|IUSAI'
-  device: 'smartphone'
-  models:
-    - regex: 'IUSAI[ _]([^/;]+) Build'
-      model: 'Iusai $1'
-    - regex: 'IUSAI[ _]([^/;\)]+)[/;\)]'
-      model: 'Iusai $1'
-    - regex: 'Opsson[ _]([^/;]+) Build'
-      model: '$1'
-    - regex: '(?:Opsson-)?Opsson[ -_]([^/;]+)/'
       model: '$1'
 
 # orange
@@ -15460,23 +15511,17 @@ T-Mobile:
 
 # Teclast (teclast.com)
 Teclast:
-  regex: 'Teclast|TLA002|TLA016|X98 Air III|M20_4G|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T30|P80X|P20HD|P10[_ ]HD|M40)_(?:ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)'
+  regex: 'Teclast|TLA002|TLA016|X98 Air III|M20_4G|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T30|P80[XH]|P20HD|P10[_ ]HD|M40)_(?:ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)'
   device: 'tablet'
   models:
     - regex: 'Tbook[_ -]([^;/]+) Build'
       model: 'Tbook $1'
     - regex: 'T10\(E3C6\)'
       model: 'T10'
-    - regex: 'T30_(ROW|EEA)'
-      model: 'T30 $1'
-    - regex: 'P80X_(ROW|EEA)'
-      model: 'P80X $1'
     - regex: 'P10S\(N4H5\)'
       model: 'P10S'
     - regex: 'P20HD_(?:ROW|EEA)'
       model: 'P20HD'
-    - regex: 'M40_(?:ROW|EEA)'
-      model: 'M40'
     - regex: 'P10[_ ]HD_(?:ROW|EEA)'
       model: 'P10HD'
     - regex: 'M20_4G'
@@ -15485,6 +15530,8 @@ Teclast:
       model: 'M30 4G'
     - regex: 'TLA016'
       model: 'M16'
+    - regex: '(P80[Xh]|T30|M40)[_ ](?:ROW|EEA)'
+      model: '$1'
     - regex: '98\(M1E[45789]\)|98\(M3E3\)'
       model: 'TPad 98 10.1" 4G'
     - regex: 'X80 Power\(B2N4\)(?:[);/ ]|$)'
@@ -15517,6 +15564,8 @@ Tecno Mobile:
       model: 'Camon iClick 2'
     - regex: 'TECNO[ _]IN2(?:[);/ ]|$)'
       model: 'Camon iSky'
+    - regex: 'TECNO[ _]KB3(?:[);/ ]|$)'
+      model: 'Camon iSky 3'
     - regex: 'Tecno[ _]7C(?:[);/ ]|$)'
       model: 'DroidPad 7C'
       device: 'tablet'
@@ -16468,8 +16517,8 @@ Vestel:
       model: 'Venus 5.5V'
     - regex: 'VSP355S'
       model: 'Venus 5.5X'
-    - regex: 'Venus[ _]V([1-9])'
-      model: 'Venus V$1'
+    - regex: 'Venus[ _]V([1-9])([ _][0-9]{4})?'
+      model: 'Venus V$1$2'
     - regex: 'Venus[ _]Z([1-9]0)'
       model: 'Venus Z$1'
     - regex: 'Venus[ _]GO'
@@ -18202,7 +18251,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|503A|50[5678]J|51[0123]J|521J|523J_V1|529Jq?|5[345]1J|5[48]9J|569[HJ]|5[67]3J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A00[13]ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZR01|ZTG01|K8[37]CA)(?:[);/ ]|$)'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|503A|50[5678]J|51[0123]J|521J|523J_V1|529Jq?|5[345]1J|5[48]9J|569[HJ]|5[67]3J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A00[13]ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZR01|ZTG01|K8[37]CA|VERGATARIO ?5(?:PLUS)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -18610,6 +18659,10 @@ ZTE:
       model: 'Optus X Vista'
     - regex: 'V769M(?:[);/ ]|$)'
       model: 'Leo Q2'
+    - regex: 'VERGATARIO 5(?:[);/ ]|$)'
+      model: 'Vergatario 5'
+    - regex: 'VERGATARIO5PLUS(?:[);/ ]|$)'
+      model: 'Vergatario 5 Plus'
 
     # explicit tablet models
     - regex: 'K83CA(?:[);/ ]|$)'
@@ -18782,7 +18835,7 @@ Vertex:
   models:
     - regex: '(Lion_Dual|Lion_DC|Baccara|Eagle[ _]4G|Luck)(?:[);/ ]|$)'
       model: '$1'
-    - regex: 'ImpressMAX(?:[);/ ]|$)'
+    - regex: 'Impress ?MAX(?:[);/ ]|$)'
       model: 'Impress Max'
     - regex: 'Pro_P(3[01]0)_4G(?:[);/ ]|$)'
       model: 'Pro P$1 4G'
@@ -20713,7 +20766,7 @@ Sunstech:
 
 # Hotwav
 Hotwav:
-  regex: '(?:Venus[_ ](?:X1|X1[0245679]|R8 PLUS|R[236-9]|R1[028])|Cosmos[ _](?:V8_lite|V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13])|Hot[_ ]6)(?:[);/ ]|$)'
+  regex: '(?:Venus[_ ](?:X[12]|X1[0245679]|R8 PLUS|R[236-9]|R1[028]|X16-1)|Cosmos[ _](?:V8_lite|V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13])|Hot[_ ]6)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Cosmos[ _]V8_lite(?:[);/ ]|$)'
@@ -20722,7 +20775,9 @@ Hotwav:
       model: 'Hot 6'
     - regex: 'Venus R8 PLUS(?:[);/ ]|$)'
       model: 'Venus R8 Plus'
-    - regex: 'Venus[_ ](X1|X1[0245679]|R[236-9]|R1[028])(?:[);/ ]|$)'
+    - regex: 'Venus[_ ]X16(?:-1)?(?:[);/ ]|$)'
+      model: 'Venus X16'
+    - regex: 'Venus[_ ](X[12]|X1[0245679]|R[236-9]|R1[028])(?:[);/ ]|$)'
       model: 'Venus $1'
     - regex: '(Cosmos[ _](?:V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13]))(?:[);/ ]|$)'
       model: '$1'
@@ -23013,3 +23068,33 @@ YASIN:
   regex: 'YASIN Android TV(?:[);/ ]|$)'
   device: 'tv'
   model: ''
+
+# Blow
+Blow:
+  regex: 'LaserTAB10(?:[);/ ]|$)'
+  device: 'tablet'
+  model: 'Laser Tab 10'
+
+# FNF
+FNF:
+  regex: 'ifive(?:_mini_3GS|X2|Mini3|3)(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'ifive_mini_3GS'
+      model: 'iFive Mini 3GS'
+    - regex: 'ifive(X2|3)'
+      model: 'iFive $1'
+    - regex: 'ifiveMini3'
+      model: 'iFive Mini 3'
+
+# iMan
+iMan:
+  regex: '(i5800C|i6800)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# Vava
+VAVA:
+  regex: 'VAVA[ _](X3)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
