fix: change revert common rule BSD

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -875,9 +875,17 @@
   name: 'HP-UX'
   version: '$1'
 
-- regex: '(Free|Net|Open)BSD(?:[/ ]?(\d+[\.\d]+))?'
-  name: '$1BSD'
-  version: '$2'
+- regex: 'FreeBSD(?:[/ ]?(\d+[\.\d]+))?'
+  name: 'FreeBSD'
+  version: '$1'
+
+- regex: 'NetBSD(?:[/ ]?(\d+[\.\d]+))?'
+  name: 'NetBSD'
+  version: '$1'
+
+- regex: 'OpenBSD(?:[/ ]?(\d+[\.\d]+))?'
+  name: 'OpenBSD'
+  version: '$1'
 
 - regex: 'DragonFly(?:[/ ]?(\d+[\.\d]+))?'
   name: 'DragonFly'
