Detect new brand: ivvi Detect devices for existing brands: Alba, Tecno Mobile, HTC, Asus, AVH, LG, Polaroid, Vodafone, ZTE, Hisense, Xiaomi, Highscreen, Avvio, Vizio, Videocon, iVooMi, Huawei, Prestigio (#6782)
* feat(device) detect new brand Blow model: Laser Tab 10
feat(device) detect brand vivo models: Y30 (1938), V17 Neo (1907_19, 1907), Y11 (1906), V9 Pro (1851), V17 (1920)
feat(device) detect brand QMobile model: V7 Tab
feat(device) detect brand Teclast model: P80h
feat(device) detect brand LG model: V20 (LG-H918)
feat(device) detect brand Azumi Mobile model: IRO A5 Q
feat(device) detect brand Blu model: Studio C 5+5 LTE
feat(device) detect brand Lava model: Z66

* feat(device) detect brand Motorola models: One Vision, Moto G Stylus
feat(device) detect brand Tecno Mobile model: Camon iSky 3 (KB3)

* feat(device) detect new brand FNF models: iFive Mini 3GS, iFive X2, iFive Mini 3, iFive 3
feat(device) detect brand Nomi model: C09600
feat(device) detect brand LG model: G Flex (LGL23), G5 (LG-H820)
feat(device) detect brand Vertex model: Impress Disco
feat(device) detect brand Vestel models: Venus V3 5020, Venus V3 5570
feat(device) detect brand Hotwav models: Venus X2, Venus X16
feat(device) detect brand ZTE models: Vergatario 5, Vergatario 5 Plus

* feat(device) detect brand Digma model: Plane 8580 4G (PS8199ML)
feat(device) detect brand Vertex models: Impress Max, Impress Open
feat(device) detect brand Motorola models: Moto G3, Moto X Play (XT1563)
feat(device) detect brand Intex models: Aqua Lions T1 Lite, Aqua A4 Plus,
 Aqua A4, Aqua Lions 2, Aqua Lions 3, Aqua Lions E3, Aqua Lions N1, Aqua Lions T1,
 Aqua Crystal Plus, Aqua Fulvu E5, Aqua Jewel 2, Aqua S1, Aqua S3

feat(test) remove duplicate tests P80X_EEA, P80X_ROW in file smartphone-18.yml

* feat(device) detect new brand iMan models: i5800C, i6800
feat(device) detect brand iPro model: I9355A
feat(device) detect new brand VAVA model: X3
feat(device) detect brand Samsung mo

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -151,18 +151,22 @@ HTC:
       model: 'Desire 310'
     - regex: '608t(?:[);/ ]|$)'
       model: 'Desire 608t'
-    - regex: 'HTC_0P9O2(?:[);/ ]|$)'
+    - regex: 'HTC_(?:0P9O2|D610x)(?:[);/ ]|$)'
       model: 'Desire 610'
     - regex: 'HTC[_ ]?(0P4E[12])(?:[);/ ]|$)'
       model: 'Desire 601'
-    - regex: 'HTCD620h(?:[);/ ]|$)'
+    - regex: 'HTC_?D620h(?:[);/ ]|$)'
       model: 'Desire 620'
-    - regex: 'HTC(?:0P9C2|D816x)(?:[);/ ]|$)'
+    - regex: 'HTC_D626ph(?:[);/ ]|$)'
+      model: 'Desire 626'
+    - regex: 'HTC_?(?:0P9C2|D816[xd]?)(?:[);/ ]|$)'
       model: 'Desire 816'
     - regex: 'HTC_?D526h(?:[);/ ]|$)'
       model: 'Desire 526'
     - regex: 'EXODUS 1(?:[);/ ]|$)'
       model: 'Exodus 1'
+    - regex: 'HTC 2Q7A100(?:[);/ ]|$)'
+      model: 'U19e'
 
     - regex: 'NexusHD2' # custom rom for hd2
       model: 'HD2'
@@ -1132,7 +1136,7 @@ Acteck:
 
 # Alba
 Alba:
-  regex: 'Alba ?(?:57|4|10 TABLET|(?:7|10)(?:Nou|Pie))(?:[);/ ]|$)'
+  regex: 'Alba ?(?:57|4|10 TABLET|(?:[78]|10)(?:Nou|Pie))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Alba 57'
@@ -1142,7 +1146,7 @@ Alba:
     - regex: '10 TABLET'
       device: 'tablet'
       model: '10 Tablet'
-    - regex: 'Alba((?:7|10)(?:Nou|Pie))'
+    - regex: 'Alba((?:[78]|10)(?:Nou|Pie))'
       device: 'tablet'
       model: '$1'
 
@@ -2439,7 +2443,7 @@ Garmin-Asus:
 
 # Asus
 Asus:
-  regex: 'Asus|Transformer|ZenFone Max|MeMOPad 10|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)(?:[);/ ]|$)|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(5[02]0|620|55[2345])KL|ZD55[23]KL|ZS6(?:61|7[01])KS|ZS(6[0236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE|Z00[SV]D'
+  regex: 'Asus|Transformer|ZenFone Max|MeMOPad 10|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)(?:[);/ ]|$)|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(5[02]0|620|55[2345])KL|ZD55[23]KL|ZS6(?:61|7[01])KS|ZS(6[0236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE|Z00[SV]D|P01Y_S'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -2506,7 +2510,7 @@ Asus:
     - regex: 'Slider SL101'
       model: 'Eee Pad Slider SL101'
       device: 'tablet'
-    - regex: 'P01[YZ]'
+    - regex: 'P01[YZ](?:_S)?'
       model: 'ZenPad C 7.0'
       device: 'tablet'
     - regex: 'P008 Build'
@@ -2646,7 +2650,7 @@ Asus:
       model: 'ZenFone 3 Max'
     - regex: '(?:ASUS_)?(X008)'
       model: 'ZenFone 3 Pegasus'
-    - regex: '(?:ASUS_)?(ZE553KL|Z01HD)'
+    - regex: '(?:ASUS_)?(ZE553KL|Z01HDA?)'
       model: 'ZenFone 3 Zoom'
     - regex: '(?:ASUS_)?ZS550KL'
       model: 'ZenFone 3 Deluxe'
@@ -2654,7 +2658,7 @@ Asus:
       model: 'ZenFone Selfie'
     - regex: '(?:ASUS_)?(Z016[DS]|Z01FD)'
       model: 'ZenFone 3 Deluxe'
-    - regex: '(?:ASUS_)?(Z017DA|ZE520KL|ZE552KL|Z017D|Z012(D|S))'
+    - regex: '(?:ASUS_)?Z(?:017DA|E520KL|E552KL|017D|012(?:DC?|S))'
       model: 'ZenFone 3'
     - regex: '(?:ASUS_)?Z01B[DS]|ZC551KL'
       model: 'ZenFone 3 Laser'
@@ -2726,8 +2730,8 @@ AVH:
   regex: 'Excer[ _]'
   device: 'tablet'
   models:
-    - regex: 'Excer[ _]G5.3'
-      model: 'Excer G5.3'
+    - regex: 'Excer[ _]G5.([36])'
+      model: 'Excer G5.$1'
     - regex: 'Excer[ _]G5'
       model: 'Excer G5'
     - regex: 'Excer[ _]10[ _]PRO'
@@ -4059,7 +4063,7 @@ Changhong:
 
 # Cherry Mobile (cherrymobile.com)
 'Cherry Mobile':
-  regex: 'Cherry|Superion S1 DTV|Flare([ _])?(2X|4|A[123]|J[123568]|P[13]|S[4-8]|X2|Y[367]|S Play|HD|LITE|XL|X_V2|Y3s|Tab)(?:[ _](?:Pro|Plus|Max|LTE))?|Fusion Bolt|Omega[_ ](?:Icon 2|Icon Lite 2|lite[_ ][43][Cs]?|HD [45]|HD_Duo)|Spin Max 2|Selfie_Two'
+  regex: 'Cherry|Superion S1 DTV|Flare([ _])?(2X|4|A[123]|J[123568]|P[13]|S[4-8]|X2|Y[367]|S Play|HD|LITE|XL|X_V2|Y3s|Tab)(?:[ _](?:Pro|Plus|Max|LTE))?|Fusion Bolt|Omega[_ ](?:Icon 2|Icon Lite 2|lite[_ ][43][Cs]?|HD [45]|HD_Duo)|Spin Max 2|Selfie_Two|Flare_5'
   device: 'smartphone'
   models:
     - regex: '(Flare2X)'
@@ -4088,8 +4092,10 @@ Changhong:
       model: 'Flare X V2'
     - regex: 'Flare[ _](A2|J3|P1|S[467])[ _]Lite'
       model: 'Flare $1 Lite'
-    - regex: 'Flare[ _](J[12]|S[57]|Y3|J6)[ _]mini'
+    - regex: 'Flare[ _](J[12]|S[57]|Y3|J6|P1)[ _]mini'
       model: 'Flare $1 Mini'
+    - regex: 'Flare[_ ]?(S[567]|J[63])[_ ]?Plus'
+      model: 'Flare $1 Plus'
     - regex: 'Flare_J2_2018'
       model: 'Flare J2 (2018)'
     - regex: 'Flare S4 Max LTE'
@@ -4098,11 +4104,13 @@ Changhong:
       model: 'Flare $1 Max'
     - regex: 'FlareS5LiteDTV'
       model: 'Flare S5 Lite DTV'
-    - regex: 'Flare[_ ](S[567]|J6)[_ ]Plus'
-      model: 'Flare $1 Plus'
+    - regex: 'Flare[_ ]J2[_ ]DTV'
+      model: 'Flare S2 DTV'
+    - regex: 'Flare[_ ]Lite[_ ]3S'
+      model: 'Flare Lite S3'
     - regex: 'FLARE S6 POWER'
       model: 'Flare S6 Power'
-    - regex: 'Flare(?:[ _])?(4|A[123]|J8 LTE|J[13568]|P[13]|S[4-8]|X2|Y3s|Y7_LTE|Y[673])'
+    - regex: 'Flare(?:[ _])?(A[123]|J8 LTE|J[13568]|P[13]|S[4-8]|X2|Y3s|Y7_LTE|Y[673]|[45])'
       model: 'Flare $1'
     - regex: 'OMEGA HD ([45])'
       model: 'Omega HD $1'
@@ -6420,16 +6428,16 @@ Grape:
   device: 'smartphone'
   model: 'GTM-5$1'
 
-# Vizio
+# Vizio (vizio.com)
 Vizio:
-  regex: 'Vizio|VAP430|VTAB1008'
+  regex: 'Vizio|(?:VAP430|VTAB1008|XR6[PM]10)(?:[);/ ]|$)'
   device: 'tv'
   models:
     - regex: 'VAP430'
       model: 'VAP430'
-    - regex: 'VTAB1008'
+    - regex: '(VTAB1008|XR6[PM]10)'
       device: 'tablet'
-      model: 'VTAB1008'
+      model: '$1'
 
 # GOCLEVER
 GOCLEVER:
@@ -6732,9 +6740,13 @@ Hisense:
       device: 'tv'
       model: '$1'
 
-    - regex: '(?:HS-)?Hisense ([^;/]+) Build'
+    - regex: '(?:HS-)?Hisense ([^;/)]+) Pro(?: Build|[);])'
+      model: '$1 Pro'
+    - regex: '(?:HS-)?Hisense ([^;/)]+) Plus(?: Build|[);])'
+      model: '$1 Plus'
+    - regex: '(?:HS-)?Hisense ([^;/)]+)(?: Build|[);])'
       model: '$1'
-    - regex: 'Hisense ([^);/]+)'
+    - regex: '(?:HS-)?Hisense ([^/]+)/'
       model: '$1'
 
 # Hi-Level
@@ -7074,7 +7086,7 @@ Huawei:
       model: 'Honor View 30'
     - regex: 'OXF-AN10(?:[);/ ]|$)'
       model: 'Honor View 30 Pro'
-    - regex: '(?:Honor_|HW-)?SCL-L(01|32)(?:_TD)?(?:[);/ ]|$)'
+    - regex: '(?:Honor_|HW-)?SCL-L(0[1-4]|21|32)(?:_TD)?(?:[);/ ]|$)'
       model: 'Honor Y6'
     - regex: '(?:Honor_|HW-)?LYO-L21(?:[);/ ]|$)'
       model: 'Honor Y6 II Compact'
@@ -9710,6 +9722,8 @@ LG:
       model: 'Stylo 2 V'
     - regex: 'L-41A(?:[);/ ]|$)'
       model: 'Style 3'
+    - regex: 'LG-LS777(?:[);/ ]|$)'
+      model: 'Stylo 3'
     - regex: 'LM-Q710|LML713DL'
       model: 'Stylo 4'
     - regex: '(?:LM-Q720|LGL722DL)(?:[);/ ]|$)'
@@ -9892,6 +9906,8 @@ LG:
       model: 'Spirit'
     - regex: '(?:LG)?C660'
       model: 'Optimus Pro'
+    - regex: 'LGL158VL'
+      model: 'Rebel 3'
     - regex: 'LML21(?:1B|2V)L'
       model: 'Rebel 4'
     - regex: 'VS876'
@@ -14686,6 +14702,8 @@ Polaroid:
       model: 'L5s'
     - regex: 'PRO4611(?:PR201)?'
       model: 'Pro4611'
+    - regex: 'PRO5023'
+      model: 'Phantom 5'
     - regex: 'PROV400'
       model: 'Agate'
     - regex: 'PROV350'
@@ -14816,34 +14834,24 @@ Positivo:
     - regex: 'YPY_S450'
       model: 'YPY S450'
 
-# Prestigio
+# Prestigio (prestigio.ru)
 Prestigio:
   regex: 'Prestigio 5500 DUO|(?:PMP|PAP|PMT|PSP|PGPS)[0-9]+[a-z0-9_]+(?:[);/ ]|$)|Muze C3'
   device: 'tablet'
   models:
-    - regex: 'PMT3277_3G'
-      model: 'MultiPad Ranger 7.0 3G'
-    - regex: 'PGPS7799CIS08GBPG(?:[);/ ]|$)'
-      model: 'Geo Vision Tour 3'
-    - regex: 'PGPS7797(?:[);/ ]|$)'
-      model: 'Geo Vision Tour 2'
-    - regex: 'PMT3201_4G'
-      model: 'Grace 4G'
-    - regex: 'PSP5551DUO'
-      model: 'Grace S5'
-    - regex: 'PMT3287_3G'
-      model: 'MultiPad Ranger 8.0 3G'
+    # explicit smartphone models
     - regex: 'Prestigio 5500 DUO'    # PAP5500DUO
       model: 'MultiPhone 5500 Duo'
       device: 'smartphone'
-    - regex: 'PMT3208[_ ]3G'
-      model: 'MultiPad Wize 8.0 3G'
-    - regex: 'PSP7546DUO([ _][A-Z]{2})?'
-      model: 'X Pro'
-    - regex: 'PSP7610DUO([ _][A-Z]{2})?'
-      model: 'S Max'
-    - regex: '(PM[PT][0-9]+[a-z0-9_]+)(?:[);/ ]|$)'
-      model: '$1'
+    - regex: 'PSP(5517|550[578])DUO(?:[);/ ]|$)'
+      model: 'MultiPhone $1 Duo'
+      device: 'smartphone'
+    - regex: 'PSP5551DUO'
+      device: 'smartphone'
+      model: 'Grace S5'
+    - regex: 'PSP5470DUO'
+      device: 'smartphone'
+      model: 'Grace X5'
     - regex: 'PSP3552DUO(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze H3'
@@ -14856,6 +14864,26 @@ Prestigio:
     - regex: 'Muze C3(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C3'
+    # explicit tables models
+    - regex: 'PMT3277_3G'
+      model: 'MultiPad Ranger 7.0 3G'
+    - regex: 'PGPS7799CIS08GBPG(?:[);/ ]|$)'
+      model: 'Geo Vision Tour 3'
+    - regex: 'PGPS7797(?:[);/ ]|$)'
+      model: 'Geo Vision Tour 2'
+    - regex: 'PMT3201_4G'
+      model: 'Grace 4G'
+    - regex: 'PMT3287_3G'
+      model: 'MultiPad Ranger 8.0 3G'
+    - regex: 'PMT3208[_ ]3G'
+      model: 'MultiPad Wize 8.0 3G'
+    - regex: 'PSP7546DUO([ _][A-Z]{2})?'
+      model: 'X Pro'
+    - regex: 'PSP7610DUO([ _][A-Z]{2})?'
+      model: 'S Max'
+    # general detection
+    - regex: '(PM[PT][0-9]+[a-z0-9_]+)(?:[);/ ]|$)'
+      model: '$1'
     - regex: '((?:PAP|PSP)[0-9]+[a-z0-9_]+(?: DUO)?)(?:[);/ ]|$)'
       model: '$1'
       device: 'smartphone'
@@ -15617,6 +15645,8 @@ Tecno Mobile:
       model: 'Camon CM'
     - regex: 'Tecno[ _-]CA7(?:[);/ ]|$)'
       model: 'Camon X'
+    - regex: 'Tecno[ _-]CA8(?:[);/ ]|$)'
+      model: 'Camon X Pro'
     - regex: 'TECNO[ _]F3(?:[);/ ]|$)'
       model: 'Pop 1'
     - regex: 'TECNO[ _]B1[fg](?:[);/ ]|$)'
@@ -16538,7 +16568,7 @@ Vestel:
 
 # Videocon
 Videocon:
-  regex: 'Videocon[_ \-]|(?:VT75C|V406018|V512930|V50(?:2430|3630|5024|5430|4630|5[98]20)|Z45_(?:Dazzle|Amaze)|Z45Q Star|Z50 Nova)(?:[);/ ]|$)'
+  regex: 'Videocon[_ \-]|(?:VT75C|V406018|V512930|V50(?:2430|3630|4730|5024|5430|4630|5[98]20)|Z45_(?:Dazzle|Amaze)|Z45Q Star|Z50 Nova)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Videocon_V1585'
@@ -16555,6 +16585,8 @@ Videocon:
       model: 'Kryton 22 Plus'
     - regex: 'V503630(?:[);/ ]|$)'
       model: 'Delite 11'
+    - regex: 'V504730(?:[);/ ]|$)'
+      model: 'Delite 21'
     - regex: 'V505920(?:[);/ ]|$)'
       model: 'Metal Pro 2'
     - regex: 'V505820(?:[);/ ]|$)'
@@ -16574,7 +16606,7 @@ Videocon:
 
 # Vodafone
 Vodafone:
-  regex: '(?<!FBCR/)Vodafone[ _-]|Smart ?Tab ?(?:III? ?)?(?:|4G|7|10)[);/ -]|VodafoneSmartChat|VFD[ _][0-9]+(?:[);/ ]|$)|VFD320|VF6[89]5|VF-(696|1397|795|895N|1497)'
+  regex: '(?<!FBCR/)Vodafone[ _-]|Smart ?Tab ?(?:III? ?)?(?:|4G|7|10)[);/ -]|VodafoneSmartChat|(?:VFD[ _][0-9]+|VFD320|VF6[89]5|VF-(696|1397|795|895N|1497))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'VFD 100'
@@ -16599,12 +16631,16 @@ Vodafone:
       model: 'Smart X9'
     - regex: 'VFD 610'
       model: 'Smart N8'
+    - regex: 'VFD 630'
+      model: 'Smart N10'
     - regex: 'Smart ultra 6'
       model: 'Smart Ultra 6'
     - regex: 'VFD 700'
       model: 'Smart Ultra 7'
     - regex: 'VFD 720'
       model: 'Smart N9'
+    - regex: 'VFD 730'
+      model: 'Smart V10'
     - regex: 'VFD 900'
       model: 'Smart Platinum 7'
     - regex: 'Vodafone[ _]875(?:[);/ ]|$)'
@@ -18267,6 +18303,8 @@ ZTE:
       model: 'Rakuten Big'
     - regex: 'ZTG01(?:[);/ ]|$)'
       model: 'A1'
+    - regex: 'ZTE T221(?:[);/ ]|$)'
+      model: 'Blade AF3'
     - regex: 'A7020(?:[);/ ]|$)'
       model: 'Blade A7s (2020)'
     - regex: 'ZTE 2050(?:RU)?'
@@ -18467,6 +18505,8 @@ ZTE:
       model: 'Blade L3 Apex'
     - regex: 'Blade L3(?:[);/ ]|$)'
       model: 'Blade L3'
+    - regex: 'ZTE[ _]T610(?:[);/ ]|$)'
+      model: 'Blade L4'
     - regex: 'Blade L5 Plus(?:[);/ ]|$)'
       model: 'Blade L5 Plus'
     - regex: 'Blade L5(?:[);/ ]|$)'
@@ -18493,6 +18533,8 @@ ZTE:
       model: 'Blade S6'
     - regex: 'T920(?:[);/ ]|$)'
       model: 'Blade S7'
+    - regex: 'ZTE[ _]T617(?:[);/ ]|$)'
+      model: 'Blade D Lux'
     - regex: 'BLADE V Ultra(?:[);/ ]|$)'
       model: 'Blade V Ultra'
     - regex: 'Blade V6 MAX(?:[);/ ]|$)'
@@ -18663,6 +18705,8 @@ ZTE:
       model: 'Vergatario 5'
     - regex: 'VERGATARIO5PLUS(?:[);/ ]|$)'
       model: 'Vergatario 5 Plus'
+    - regex: 'ZTE V5 PRO(?:[);/ ]|$)'
+      model: 'V5 Pro'
 
     # explicit tablet models
     - regex: 'K83CA(?:[);/ ]|$)'
@@ -19040,6 +19084,8 @@ Highscreen:
       model: 'Power Five Evo'
     - regex: 'Power Five Max(?:[);/ ]|$)'
       model: 'Power Five Max'
+    - regex: 'Power_Five(?:[);/ ]|$)'
+      model: 'Power Five'
     - regex: 'FestXL-Pro(?:[);/ ]|$)'
       model: 'Fest XL Pro'
     - regex: 'FestXL(?:[);/ ]|$)'
@@ -21057,13 +21103,15 @@ P-UP:
 
 # iVooMi
 iVooMi:
-  regex: '(?:Innelo_1|iV 505)(?:[);/ ]|$)'
+  regex: '(?:Innelo_1|iV 505|Me 1\+)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Innelo_1'
       model: 'Innelo 1'
     - regex: 'iV 505'
       model: 'Me 1'
+    - regex: 'Me 1\+'
+      model: 'Me 1+'
 
 # Pixelphone
 Pixelphone:
@@ -23096,5 +23144,11 @@ iMan:
 # Vava
 VAVA:
   regex: 'VAVA[ _](X3)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# ivvi
+ivvi:
+  regex: 'ivvi[ _](F1S|F2C|V1M-S|V2|i1-S)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
