--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3423,7 +3423,7 @@
     version: 6.49.12.65
     engine: Blink
     engine_version: ""
-- 
+-
   user_agent: Mozilla/5.0 (Linux; Android 10; SM-G973U Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/86.0.4240.185 Mobile Safari/537.36 EdgW/1.0
   client:
     type: browser
@@ -3432,3 +3432,11 @@
     engine: WebKit
     engine_version: "537.36"
 
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.103 Superbird/73.0.3683.103 Safari/537.36
+  client:
+    type: browser
+    name: SuperBird
+    version: 73.0.3683.103
+    engine: Blink
+    engine_version: ""
